# controllers/contacts.js
@@ -27,7 +27,10 @@ const createContact = async (req, res) => {
     lastName: req.body.lastName,
     email: req.body.email,
     favoriteColor: req.body.favoriteColor,
-    birthday: req.body.birthday
+    birthday: req.body.birthday,
+    favoriteFood: req.body.favoriteFood,
+    favoriteMovie: req.body.favoriteMovie,
+    favoriteBook: req.body.favoriteBook
   };
   const response = await mongodb.getDb().db().collection('contacts').insertOne(newContact);
   if (response.acknowledged) {
@@ -45,7 +48,10 @@ const updateContact = async (req, res) => {
     lastName: req.body.lastName,
     email: req.body.email,
     favoriteColor: req.body.favoriteColor,
-    birthday: req.body.birthday
+    birthday: req.body.birthday,
+    favoriteFood: req.body.favoriteFood,
+    favoriteMovie: req.body.favoriteMovie,
+    favoriteBook: req.body.favoriteBook
   };
   const response = await mongodb
     .getDb()
